updated with comments and improved decision tree

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "13      Rain        Mild     High  Strong          No"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "10   Sunny        Mild   Normal  Strong         Yes"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "0.9709505944546686"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "13    Rain        Mild     High  Strong          No"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "0.9709505944546686"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "12  Overcast         Hot   Normal    Weak         Yes"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "0.24674981977443933"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "0.15183550136234159"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        "0.02922256565895487"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "0.04812703040826949"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,16 +909,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Sunny': '?', 'Overcast': 'Yes', 'Rain': '?'}"
+       "{'Rain': '?', 'Sunny': '?', 'Overcast': 'Yes'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "13    Rain        Mild     High  Strong          No"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1141,16 +1141,16 @@
       "Max Info Feature: Outlook\n",
       "Max Info Gain: 0.24674981977443933\n",
       "Feature: Outlook   Info Gain: 0.0\n",
-      "Feature: Temperature   Info Gain: 0.5709505944546686\n",
-      "Feature: Humidity   Info Gain: 0.9709505944546686\n",
-      "Feature: Wind   Info Gain: 0.01997309402197489\n",
-      "Max Info Feature: Humidity\n",
-      "Max Info Gain: 0.9709505944546686\n",
-      "Feature: Outlook   Info Gain: 0.0\n",
       "Feature: Temperature   Info Gain: 0.01997309402197489\n",
       "Feature: Humidity   Info Gain: 0.01997309402197489\n",
       "Feature: Wind   Info Gain: 0.9709505944546686\n",
       "Max Info Feature: Wind\n",
+      "Max Info Gain: 0.9709505944546686\n",
+      "Feature: Outlook   Info Gain: 0.0\n",
+      "Feature: Temperature   Info Gain: 0.5709505944546686\n",
+      "Feature: Humidity   Info Gain: 0.9709505944546686\n",
+      "Feature: Wind   Info Gain: 0.01997309402197489\n",
+      "Max Info Feature: Humidity\n",
       "Max Info Gain: 0.9709505944546686\n"
      ]
     }
@@ -1165,29 +1165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Outlook': {'Sunny': {'Humidity': {'High': 'No', 'Normal': 'Yes'}},\n",
-       "  'Overcast': 'Yes',\n",
-       "  'Rain': {'Wind': {'Weak': 'Yes', 'Strong': 'No'}}}}"
+       "{'Outlook': {'Rain': {'Wind': {'Strong': 'No', 'Weak': 'Yes'}},\n",
+       "  'Sunny': {'Humidity': {'High': 'No', 'Normal': 'Yes'}},\n",
+       "  'Overcast': 'Yes'}}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#here is the final decision tree\n",
     "root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1220,16 +1221,16 @@
       "Max Info Feature: Outlook\n",
       "Max Info Gain: 0.24674981977443933\n",
       "Feature: Outlook   Info Gain: 0.0\n",
-      "Feature: Temperature   Info Gain: 0.5709505944546686\n",
-      "Feature: Humidity   Info Gain: 0.9709505944546686\n",
-      "Feature: Wind   Info Gain: 0.01997309402197489\n",
-      "Max Info Feature: Humidity\n",
-      "Max Info Gain: 0.9709505944546686\n",
-      "Feature: Outlook   Info Gain: 0.0\n",
       "Feature: Temperature   Info Gain: 0.01997309402197489\n",
       "Feature: Humidity   Info Gain: 0.01997309402197489\n",
       "Feature: Wind   Info Gain: 0.9709505944546686\n",
       "Max Info Feature: Wind\n",
+      "Max Info Gain: 0.9709505944546686\n",
+      "Feature: Outlook   Info Gain: 0.0\n",
+      "Feature: Temperature   Info Gain: 0.5709505944546686\n",
+      "Feature: Humidity   Info Gain: 0.9709505944546686\n",
+      "Feature: Wind   Info Gain: 0.01997309402197489\n",
+      "Max Info Feature: Humidity\n",
       "Max Info Gain: 0.9709505944546686\n"
      ]
     }
@@ -1240,19 +1241,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Outlook': {'Rain': {'Wind': {'Strong': 'No', 'Weak': 'Yes'}},\n",
+       "  'Sunny': {'Humidity': {'High': 'No', 'Normal': 'Yes'}},\n",
+       "  'Overcast': 'Yes'}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# here is the construct full tree"
+    "# here is the construct full tree\n",
+    "tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#next we will make an function to do a prediction based on a feature set\n",
+    "\n",
     "#tree: (nested) dictionary, a decision tree\n",
     "#instance: series/dataframe row, a row of dataset. The row may not contain label.\n",
     "#returns: Any datatype (Int or Float or String etc.) depending on the datatype of the class, the predicted classs\n",
@@ -1271,7 +1288,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# will take a row from the train data set to test the prediction comparing Known Class value to predicted value.\n",
+    "def compare_labels(tree,df):\n",
+    "# tree is the decision tree\n",
+    "# df is the data set to predict\n",
+    "    for index, row in df.iterrows():\n",
+    "        predicted_class = predict(tree,row)\n",
+    "        print('Known Class: ', row[label_string],'  Predicted Class:', predicted_class)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known Class:  No   Predicted Class: No\n",
+      "Known Class:  No   Predicted Class: No\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  No   Predicted Class: No\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  No   Predicted Class: No\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  No   Predicted Class: No\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we see here we get matches between known class and predicted class\n",
+    "compare_labels(tree, train_data_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,12 +1343,12 @@
     "#test_data_m: a pandas dataframe/test dataset\n",
     "#returns: float, the accuray of the tree\n",
     "\n",
-    "def evaluate(tree, test_data_m, label):\n",
+    "def evaluate(tree, df, label):\n",
     "    correct_preditct = 0\n",
     "    wrong_preditct = 0\n",
-    "    for index, row in test_data_m.iterrows(): #for each row in the dataset\n",
-    "        result = predict(tree, test_data_m.iloc[index]) #predict the row\n",
-    "        if result == test_data_m[label].iloc[index]: #predicted value and expected value is same or not\n",
+    "    for index, row in df.iterrows(): #for each row in the dataset\n",
+    "        result = predict(tree, df.iloc[index]) #predict the row\n",
+    "        if result == df[label].iloc[index]: #predicted value and expected value is same or not\n",
     "            correct_preditct += 1 #increase correct count\n",
     "        else:\n",
     "            wrong_preditct += 1 #increase incorrect count\n",
@@ -1295,7 +1358,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#we evaluate on the training data set and get a perfect result in agreement with the listing above.\n",
+    "evaluate(tree,train_data_set,label_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1371,19 +1455,21 @@
        "3      Rain        Cool     High  Strong          No"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data_m = pd.read_csv(\"TestPlayTennis.csv\") #importing the dataset from the disk\n",
-    "test_data_m.head()"
+    "#next we take the test data set we obtained from kaggle and load it up\n",
+    "#this was not used to train the model\n",
+    "test_data_set = pd.read_csv(\"TestPlayTennis.csv\") #importing the dataset from the disk\n",
+    "test_data_set.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1392,59 +1478,42 @@
        "1.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate(tree, test_data_m, 'Play Tennis') #evaluating the test dataset"
+    "#we see here that it results in 100% accuracy\n",
+    "evaluate(tree, test_data_set, 'Play Tennis') #evaluating the test dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Outlook          Rain\n",
-       "Temperature      Cool\n",
-       "Humidity         High\n",
-       "Wind           Strong\n",
-       "Play Tennis        No\n",
-       "Name: 3, dtype: object"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  Yes   Predicted Class: Yes\n",
+      "Known Class:  No   Predicted Class: No\n"
+     ]
     }
    ],
    "source": [
-    "test_row = test_data_m.iloc[3]\n",
-    "test_row"
+    "#we see here we get matches between known class and predicted class\n",
+    "compare_labels(tree, test_data_set)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'No'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "predict(tree,test_row)"
+    "In conclusion we saw how one can use the information gain and the entropy to select which nodes to start building the decision tree with.  You do this by iterating over the entire data set to find the best feature.  Then you use that to create your first node.  You then remove that feature and iterate over the next set of features where you pick the best information gain to fill out the next level of the tree.  This helps to provide the best chance of a correct prediction.  Once the full tree is built you can then traverse the tree with the features until you make a prediction."
    ]
   }
  ],
@@ -1464,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
