generate_sub_tree to docstring

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -870,13 +870,19 @@
     "#now we will create the trees\n",
     "#first we will create sub trees given the information gain\n",
     "\n",
-    "#feature_name: string, the name of the feature that we want to add to tree and shrink dataset (Ex. Outlook)\n",
-    "#df: a pandas dataframe/dataset\n",
-    "#label: string, name of the label of the dataframe (=Play Tennis)\n",
-    "#class_list: list, unique classes of the label (=[Yes, No]).\n",
-    "#returns: (dictionary, dataframe), the tree node with it’s branches and the updated dataset\n",
-    "\n",
     "def generate_sub_tree(feature_name, max_info_gain, df, label, class_list):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "        Parameters:\n",
+    "            feature_name (string): the name of the feature that we want to add to tree and shrink dataset (Ex. Outlook)\n",
+    "            df (DataFrame): a pandas dataframe/dataset\n",
+    "            label (string): name of the label of the dataframe (=Play Tennis)\n",
+    "            class_list (list): unique classes of the label (=[Yes, No]).\n",
+    "        Returns:\n",
+    "            (dict, DataFrame): the tree node with it’s branches and the updated dataset\n",
+    "    \"\"\"\n",
+    "    \n",
     "    feature_value_count_dict = df[feature_name].value_counts(sort=False) #dictionary of the count of unqiue feature value\n",
     "    tree = {} #sub tree or node\n",
     "    \n",
