make_tree to docstring

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -1087,23 +1087,27 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Finding the most informative feature\n",
+    "\n",
+    "Method description:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Finding the most informative feature**\n",
+    "<br>\n",
+    "<br>\n",
     "Making a tree node with a feature name and feature values as branches\n",
-    "- If pure class, adding leaf node (= Class) to the tree node\n",
-    "- If impure class, adding an expandable node (= ‘?’) to the tree node\n",
-    "Shrinking/Updating the dataset according to the pure class\n",
-    "Adding the node with branches into a tree\n",
-    "Expand the branch of the next impure class (= ‘?’) with an updated dataset\n",
-    "The recursion endpoint:\n",
-    "The dataset becomes empty after updating\n",
-    "There is no expandable branch (= all pure class)\n",
-    "Method description:\n",
-    "root: dictionary, the current pointed node/feature of the tree. It is contineously being updated.\n",
-    "prev_feature_value: Any datatype (Int or Float or String etc.) depending on the datatype of the previous feature, the previous value of the pointed node/feature\n",
-    "df: a pandas dataframe/dataset\n",
-    "label: string, name of the label of the dataframe (=Play Tennis)\n",
-    "class_list: list, unique classes of the label (=[Yes, No]).\n",
-    "returns: None"
+    "1. adding nodes\n",
+    "    1. If pure class, adding leaf node (= Class) to the tree node\n",
+    "    1. If impure class, adding an expandable node (= ‘?’) to the tree node\n",
+    "1. Shrinking/Updating the dataset according to the pure class\n",
+    "1. Adding the node with branches into a tree\n",
+    "1. Expand the branch of the next impure class (= ‘?’) with an updated dataset\n",
+    "1. The recursion endpoint:\n",
+    "    1. The dataset becomes empty after updating\n",
+    "    1. There is no expandable branch (= all pure class)"
    ]
   },
   {
@@ -1113,6 +1117,20 @@
    "outputs": [],
    "source": [
     "def make_tree(root, prev_feature_value, df, label, class_list):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "        Makes decision tree        \n",
+    "        Parameters: \n",
+    "            root (dict): the current pointed node/feature of the tree. It is contineously being updated.\n",
+    "            prev_feature_value (any): depending on the datatype of the previous feature, the previous value of the pointed node/feature\n",
+    "            df (DataFrame): a pandas dataframe/dataset\n",
+    "            label (string): name of the label of the dataframe (=Play Tennis)\n",
+    "            class_list (list): unique classes of the label (=[Yes, No]).\n",
+    "        Returns: \n",
+    "            (None)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
     "    if df.shape[0] != 0: #if dataset becomes enpty after updating\n",
     "        max_info_feature, max_info_gain = find_most_informative_feature(df, label, class_list) #most informative feature\n",
     "        print('Max Info Feature:',max_info_feature)\n",
@@ -1165,9 +1183,10 @@
     }
    ],
    "source": [
-    "#now we create our tree.\n",
-    "#we see each iteration as it looks at the information gain of the remaining features \n",
-    "#to select the next feature to use\n",
+    "# now we create our tree.\n",
+    "# we see each iteration as it looks at the information gain of the remaining features \n",
+    "# to select the next feature to use\n",
+    "\n",
     "root={}\n",
     "make_tree(root,None,train_data_set, label_string, label_class_list)"
    ]
