id3 to docstring

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -1210,7 +1210,8 @@
     }
    ],
    "source": [
-    "#here is the final decision tree\n",
+    "# here is the final decision tree\n",
+    "\n",
     "root"
    ]
   },
@@ -1220,12 +1221,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#now we can construct our id3 algorithm function\n",
+    "# now we can construct our id3 algorithm function\n",
     "\n",
-    "#df: a pandas dataframe/dataset\n",
-    "#label: string, name of the label of the dataframe (=Play Tennis)\n",
-    "#returns: (nested) dictionary, the decision tree\n",
     "def id3(df, label):\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Parameters:\n",
+    "            df (DataFrame): a pandas dataframe/dataset\n",
+    "            label (string): name of the label of the dataframe (=Play Tennis)\n",
+    "        Returns: \n",
+    "            (dict): the decision tree\n",
+    "    \"\"\"\n",
+    "\n",
     "    df_copy = df.copy() #getting a copy of the dataset\n",
     "    tree = {} #tree which will be updated is set empty to start\n",
     "    class_list = df_copy[label].unique() #getting unqiue classes of the label\n",
@@ -1287,6 +1294,7 @@
    ],
    "source": [
     "# here is the construct full tree\n",
+    "\n",
     "tree"
    ]
   },
