compare_label to docstring

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -1226,6 +1226,7 @@
     "def id3(df, label):\n",
     "\n",
     "    \"\"\"\n",
+    "        Host function to pre-process data and create decision tree.\n",
     "        Parameters:\n",
     "            df (DataFrame): a pandas dataframe/dataset\n",
     "            label (string): name of the label of the dataframe (=Play Tennis)\n",
@@ -1304,13 +1305,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#next we will make an function to do a prediction based on a feature set\n",
-    "\n",
-    "#tree: (nested) dictionary, a decision tree\n",
-    "#instance: series/dataframe row, a row of dataset. The row may not contain label.\n",
-    "#returns: Any datatype (Int or Float or String etc.) depending on the datatype of the class, the predicted classs\n",
+    "# next we will make an function to do a prediction based on a feature set\n",
     "\n",
     "def predict(tree, instance):\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Makes a prediction from generated decision tree.\n",
+    "        Parameters:        \n",
+    "            tree (dict): a decision tree\n",
+    "            instance (series|DataFrame): a row of dataset. The row may not contain label.\n",
+    "        Returns: \n",
+    "            (any): depending on the datatype of the class, the predicted classs    \n",
+    "    \"\"\"\n",
+    "\n",
     "    if not isinstance(tree, dict): #if it is leaf node\n",
     "        return tree #return the value\n",
     "    else:\n",
@@ -1329,9 +1336,17 @@
    "outputs": [],
    "source": [
     "# will take a row from the train data set to test the prediction comparing Known Class value to predicted value.\n",
+    "\n",
     "def compare_labels(tree,df):\n",
-    "# tree is the decision tree\n",
-    "# df is the data set to predict\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Parameters:\n",
+    "            tree (dict): the decision tree\n",
+    "            df (DataFrame): the data set to predict\n",
+    "        Returns:\n",
+    "            (None): prints to console\n",
+    "    \"\"\"\n",
+    "\n",
     "    for index, row in df.iterrows():\n",
     "        predicted_class = predict(tree,row)\n",
     "        print('Known Class: ', row[label_string],'  Predicted Class:', predicted_class)\n"
@@ -1364,7 +1379,8 @@
     }
    ],
    "source": [
-    "#we see here we get matches between known class and predicted class\n",
+    "# we see here we get matches between known class and predicted class\n",
+    "\n",
     "compare_labels(tree, train_data_set)"
    ]
   },
