evaluate to docstring

--- a/src/final/homework 1 decision tree best.ipynb
+++ b/src/final/homework 1 decision tree best.ipynb
@@ -1391,11 +1391,18 @@
    "outputs": [],
    "source": [
     "#To evaluate the model i.e. the tree we need a labeled test dataset. Then after predicting we can calculate the difference of actual and predicted value in percentage.\n",
-    "#tree: (nested) dictionary, a decision tree\n",
-    "#test_data_m: a pandas dataframe/test dataset\n",
-    "#returns: float, the accuray of the tree\n",
     "\n",
     "def evaluate(tree, df, label):\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Evaluates the performance of the generated tree vs test data.\n",
+    "        Parameters:\n",
+    "            tree (dict): a decision tree\n",
+    "            test_data_m (DataFrame): a pandas dataframe/test dataset\n",
+    "        Returns:\n",
+    "            (float): the accuray of the tree\n",
+    "    \"\"\"\n",
+    "\n",
     "    correct_preditct = 0\n",
     "    wrong_preditct = 0\n",
     "    for index, row in df.iterrows(): #for each row in the dataset\n",
@@ -1425,7 +1432,8 @@
     }
    ],
    "source": [
-    "#we evaluate on the training data set and get a perfect result in agreement with the listing above.\n",
+    "# we evaluate on the training data set and get a perfect result in agreement with the listing above.\n",
+    "\n",
     "evaluate(tree,train_data_set,label_string)"
    ]
   },
@@ -1513,8 +1521,9 @@
     }
    ],
    "source": [
-    "#next we take the test data set we obtained from kaggle and load it up\n",
-    "#this was not used to train the model\n",
+    "# next we take the test data set we obtained from kaggle and load it up\n",
+    "# this was not used to train the model\n",
+    "\n",
     "test_data_set = pd.read_csv(\"TestPlayTennis.csv\") #importing the dataset from the disk\n",
     "test_data_set.head()"
    ]
@@ -1536,7 +1545,8 @@
     }
    ],
    "source": [
-    "#we see here that it results in 100% accuracy\n",
+    "# we see here that it results in 100% accuracy\n",
+    "\n",
     "evaluate(tree, test_data_set, 'Play Tennis') #evaluating the test dataset"
    ]
   },
@@ -1557,7 +1567,8 @@
     }
    ],
    "source": [
-    "#we see here we get matches between known class and predicted class\n",
+    "# we see here we get matches between known class and predicted class\n",
+    "\n",
     "compare_labels(tree, test_data_set)"
    ]
   },
